--- a/weekTwo/api.css
+++ b/weekTwo/api.css
@@ -1,27 +1,26 @@
 body {
-    background-color: #3f4959 !important;
-    background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png") !important;
+    background-color: #3f4959;
+    background-image: url("https://images.unsplash.com/photo-1520034475321-cbe63696469a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80") !important;
     text-align: center;
 }
 
 h1 {
     text-align: center;
     color:#ffffff !important;
+    margin-top:5vh;
 }
 
-.card {
-    width: 30%;
-    display: inline-flex;
-    vertical-align: middle;
-    margin:1vh 1vw;
-    background-color: #ffffff;
-    float: left;
+nav {
+    margin: 2vh auto;
 }
+
+/* Form Settings */
 
 form {
-    width:60%;
-    margin:5vh auto;
-
+    width:50%;
+    margin:2vh auto;
+    text-align: center;
+    display: block;
 }
 
 input {
@@ -30,7 +29,7 @@ input {
     border-radius: 5px;
     font-family: 'Montserrat', sans-serif;
     margin:2em;
-    width:50%;
+    width:45%;
     font-size:20px;
 }
 
@@ -40,3 +39,28 @@ label {
     text-align: center;
     color:#ffffff !important;
 }
+
+/* End of Form Settings */
+
+/* API Results Settings */
+
+section {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: auto;
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: flex-start !important;
+    margin-bottom: 5em;
+}
+
+.card {
+    width: 32%;
+    height: auto;
+    display: inline-flex;
+    margin: 0 auto;
+    background-color: #ffffff;
+}
+
+/* End of API Results Settings */
